- Added missing animation dependency. - Added column for unexpected xml tags, so they can also be seen and searched in the result. - Added ability to remove rows from dataset, as a method of manually narrowing down searches. Original log files are not affected by this.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -116,6 +116,8 @@ html, body {
   height: 100%
 }
 
+
+
 .textcontainer{
   //padding: 10px;
   border: 1px solid silver;
@@ -133,6 +135,10 @@ html, body {
   border: none;
   height: 100%;
   margin: -10px;
+}
+
+.logTable td:last-child {
+  min-width: 90px;
 }
 
 .drop-box {
