--- a/src/partials/logtable.html
+++ b/src/partials/logtable.html
@@ -18,8 +18,8 @@
 			</label>
         </div>
 	-->
-		<div class="table table-responsive">
-			<table ng-table="tableParams" class="table table-striped table-hover table-condensed logTable logTable" show-filter="showFilter" ng-table-columns-binding="columns">
+		<div class="table table-responsive logTable">
+			<table ng-table="tableParams" class="table table-striped table-hover table-condensed logTable" show-filter="showFilter" ng-table-columns-binding="columns">
 				
 				<!--<tr>
 					<th>Package</th>
@@ -37,12 +37,13 @@
 			log.exception.textLength
 					-->
 				<tr ng-repeat="log in $data track by log.id+log.miliseconds" ng-class="{info: log.level== 'MESSAGE', warning: log.level== 'SEVERE'}">
+					
 					<td title="'Package'" 		filter="{ package: 'text'}" 	sortable="'package'" 	ng-if="true">{{log.package}}</td>
 					
 					<td title="'Level'" 		filter="{ level: 'text'}" 		sortable="'level'"		ng-if="true">{{log.level}}</td>
 					<td title="'Milliseconds'" 	filter="{ miliseconds: 'text'}" sortable="'miliseconds'" ng-if="true">{{log.miliseconds}}</td>
 					<td title="'TimeStamp'" 	filter="{ timestamp: 'text'}" 	sortable="'timestamp'"	ng-if="true">{{log.timestamp}}</td>
-					<td title="'Thread'" 		filter="{ thread: 'text'}" 		sortable="'thread'"		ng-if="true">{{log.thread}}</td>
+					<td title="'Thread'"		filter="{ thread: 'text'}" 		sortable="'thread'"		ng-if="true" class="colThread">{{log.thread}}</td>
 					<td title="'Class'" 		filter="{ class: 'text'}" 		sortable="'class'"		ng-if="true">{{log.class}}</td>
 					<td title="'Method'" 		filter="{ method: 'text'}" 		sortable="'method'"		ng-if="true">{{log.method}}</td>
 					<td title="'Message'" 		filter="{ message: 'text'}" 	sortable="'message'"	ng-if="true">{{log.message}}</td>
