--- a/dev/partials/logtable.html
+++ b/dev/partials/logtable.html
@@ -35,7 +35,7 @@
 			</tr>
 		log.exception.textLength
 				-->
-			<tr ng-repeat="log in $data track by log.id+log.miliseconds" ng-class="{info: log.level== 'MESSAGE', warning: log.level== 'SEVERE'}">
+			<tr ng-repeat="log in $data track by log.id+log.miliseconds" ng-class="{info: log.level== 'MESSAGE', warning: log.level== 'SEVERE'}" ng-click="view(log)">
 				
 				<td title="'Package'" 		filter="{ package: 'text'}" 	sortable="'package'" 	ng-if="true">{{log.package}}</td>
 				
@@ -45,20 +45,20 @@
 				<td title="'Thread'"		filter="{ thread: 'text'}" 		sortable="'thread'"		ng-if="true" class="colThread">{{log.thread}}</td>
 				<td title="'Class'" 		filter="{ class: 'text'}" 		sortable="'class'"		ng-if="true">{{log.class}}</td>
 				<td title="'Method'" 		filter="{ method: 'text'}" 		sortable="'method'"		ng-if="true">{{log.method}}</td>
-				<td title="'Message'" 		filter="{ message: 'text'}" 	sortable="'message'"	ng-if="true" ng-click="alert(log.message)">{{log.message}}</td>
+				<td title="'Message'" 		filter="{ message: 'text'}" 	sortable="'message'"	ng-if="true">{{log.message}}</td>
 
 				<td title="'Exception'" 	filter="{ exception: 'text'}" 	sortable="'exception'"	ng-if="true" ng-init="log.limit.exception=250">
-					<div class="colContents" ng-click="alert(log.exception)">
-						{{log.exception | limitTo: log.limit.exception }}{{log.exception.length > 20 ? '' : ''}}
+					<div class="colContents">
+						{{log.exception | limitTo: log.limit.exception }}{{log.exception.length > 20 ? '.....' : ''}}
 					</div>
-					<a ng-click="log.limit.exception = log.exception.length" ng-show="log.exception.length > log.limit.exception" title="{{log.exception}}"><strong>&gt;&gt;&gt;</strong></a>
-					<a ng-click="log.limit.exception = 250" ng-show="log.exception.length == log.limit.exception" title="{{log.exception}}"><strong>&lt;&lt;&lt;</strong></a>
+					<!--<a ng-click="log.limit.exception = log.exception.length" ng-show="log.exception.length > log.limit.exception" title="{{log.exception}}"><strong>&gt;&gt;&gt;</strong></a>
+					<a ng-click="log.limit.exception = 250" ng-show="log.exception.length == log.limit.exception" title="{{log.exception}}"><strong>&lt;&lt;&lt;</strong></a>-->
 				
 				</td>
 				<td title="'Others'" 		filter="{ others: 'text'}" 		sortable="'others'"		ng-if="true">{{log.others}}</td>
 				
 	            <td>
-					<button class="btn btn-default btn-sm" ng-click="alert(log.exception)"><span class="glyphicon glyphicon-eye-open"></span></button>	
+					<!--<button class="btn btn-default btn-sm" ng-click="view(log)"><span class="glyphicon glyphicon-eye-open"></span></button>	-->
 					<button class="btn btn-danger btn-sm" ng-click="del(log)"><span class="glyphicon glyphicon-trash"></span></button>	
 				</td>
 			</tr>
