Dragging won't trigger modal, so rows are still selectable. Clicks only.

--- a/dev/partials/logtable.html
+++ b/dev/partials/logtable.html
@@ -35,7 +35,10 @@
 			</tr>
 		log.exception.textLength
 				-->
-			<tr ng-repeat="log in $data track by log.id+log.miliseconds" ng-class="{info: log.level== 'MESSAGE', warning: log.level== 'SEVERE'}" ng-click="view(log)">
+			<tr ng-repeat="log in $data track by log.id+log.miliseconds" ng-class="{info: log.level== 'MESSAGE', warning: log.level== 'SEVERE'}" disabledsglclick="view(log)" 
+                ng-mousedown="mouseDown(event)"
+                ng-mouseup  ="mouseUp(log)"
+                ng-mousemove="mouseMove(event)">
 				
 				<td title="'Package'" 		filter="{ package: 'text'}" 	sortable="'package'" 	ng-if="true">{{log.package}}</td>
 				
