--- a/src/partials/logtable.html
+++ b/src/partials/logtable.html
@@ -64,7 +64,7 @@
 				<td title="'Others'" 		filter="{ others: 'text'}" 		sortable="'others'"		ng-if="true">{{log.others}}</td>
 				
 	            <td>
-					<!--<button class="btn btn-default btn-sm" ng-click="view(log)"><span class="glyphicon glyphicon-eye-open"></span></button>	-->
+					<button class="btn btn-default btn-sm" ng-click="view(log)"><span class="glyphicon glyphicon-eye-open"></span></button>
 					<button class="btn btn-danger btn-sm" ng-click="del(log)"><span class="glyphicon glyphicon-trash"></span></button>	
 				</td>
 			</tr>
