Increased word-break limit for package column

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -163,6 +163,7 @@ html, body {
 .logTable td:nth-child(1){
     //width: 100%;
     //max-width: 150px;
+    max-width: 400px;
 }
 .logTable td:nth-child(8),.logTable td:nth-child(9){
     max-width: 300px;
