--- a/src/partials/mainform.html
+++ b/src/partials/mainform.html
@@ -9,10 +9,19 @@
 	        ngf-pattern="'.log'"
 	ng-model="files" class="drop-box" aaaaaonclick="document.getElementById('importFile').click()">Drop .log file here / click to upload <br /><br />Note: only .log files are accepted</div>
     <div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div>
-    <ul>
-           <li ng-repeat="f in files" style="font:smaller">{{f.name}} {{f.$error}} {{f.$errorParam}}</li>
-       </ul>
-       <div ng-show="log">
-	       {{log}}
-	   </div>
+    <ul ng-show="files">
+       <li ng-repeat="f in files" style="font:smaller">{{f.name}} {{f.$error}} {{f.$errorParam}}</li>
+    </ul>
+    <div ng-show="log">
+       {{log}}
+    </div>
 </div>
+<div class="form-group">
+    <input type="text" class="form-control" id='editableDiv' contenteditable='true' placeholder="or paste your log here..." style="text-align: center;" autofocus>
+</div>
+<!--
+<div id='editableDiv' contenteditable='true'>Paste</div>
+<button type="button" class="btn btn-default" ng-click="pasteLog(this)">
+    <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span> Paste Log
+</button>
+-->
