--- a/dev/partials/logtable.html
+++ b/dev/partials/logtable.html
@@ -1,7 +1,9 @@
 <div class="panel panel-default">
 	<!-- Default panel contents -->	
 	<div class="panel-heading clearfix">
-		<b>Web Logs ({{data.length}} available) ({{total}}{{isFiltered}})</b>	
+		<b>Web Logs ({{data.length}} available) </b>
+		<b ng-if="tableParams.total() != data.length">(Filtered results: {{tableParams.total()}})</div></b>
+		
 		<div class="btn-group pull-right">
 			<button class="btn btn-default btn-xs" ng-click="showFilter = !showFilter"><span class="glyphicon glyphicon-filter"></span> Search</button>	
 			<!--<button class="btn btn-default btn-xs" ng-click="showFilter = !showFilter"><span class="glyphicon glyphicon-plus"></span></button>-->
