--- a/dev/partials/logtable.html
+++ b/dev/partials/logtable.html
@@ -27,12 +27,13 @@
 			</tr>
 		log.exception.textLength
 				-->
-			<tr ng-repeat="log in $data track by log.id+log.miliseconds" ng-class="{info: log.level== 'MESSAGE', warning: log.level== 'SEVERE'}"
+			<tr ng-repeat="log in $data track by log.id+log.miliseconds" ng-class="{info: log.level== 'MESSAGE', warning: log.level== 'SEVERE', 'row-selected': log.isSelected}"
                 disabledng-mousedown="mouseDown(event)"
                 disabledng-mouseup  ="mouseUp(log)"
                 disabledsglclick="mouseUp(log)"
                 disabledng-mousemove="mouseMove(event)"
                 ng-dblClick="view(log)"
+				ng-click="toggleSelection(log)"
                 >
 				
 				<td title="'Package'" 		filter="{ package: 'text'}" 	sortable="'package'" 	ng-if="true">{{log.package}}</td>
