--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -238,3 +238,19 @@ html, body {
     border-style: solid;
     border-width: 3px 3px 3px 10px;
 }
+
+.grip{
+
+    width:5px;
+    height:30px;
+    background-color: lightgray;
+	cursor:e-resize;
+}
+
+.grip:hover{
+	background-color: gray;
+}
+
+.dragging .grip{
+	background-color:lightgreen;
+}
