- Added a changelog. - Define charset at start of toaster.scss, to prevent charset clash in author name & copyright during compilation. - Cleared https redirect. - Removed unused sidebar directive. - Cleaned up scope references. - Fixed alignment of header buttons in web log message list (Issue #12). - Added states to resize & search buttons in web log message list. - Changed row marking to use simple row colouring. - Dropped networking 'Data' class since there are no planned network requests, and to avoid confusion. - Added ID column for log message number, so sorting can be reset to default if ever changed. - Added 'on hover' helper text for columns, as easy access to column definition. - Prepare a processing factory to move logic from single controller to dedicated factory (Issue #15). - Refactored logstable as logsWeb, in preparation for additional log formats. - Refactored mainform -> startform for clarity in source. - Refactored logView -> inspectWebLog, since we'll likely have different inspectors per log type. - Row marking now only works with the dedicated flag button (Issue #18) - Prevent log viewer/inspector from opening when double clicking on action buttons, avoiding conflicting actions.

--- a/dev/partials/startform.html
+++ b/dev/partials/startform.html
@@ -9,10 +9,10 @@
 	        ngf-pattern="'.log'"
 	ng-model="files" class="drop-box" aaaaaonclick="document.getElementById('importFile').click()">Drop .log file here / click to upload <br /><br />Note: only .log files are accepted</div>
     <div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div>
-    <ul ng-show="files && parsing">
+    <ul ng-show="files && isParsing()">
        <li ng-repeat="f in files" style="font:smaller">{{f.name}} {{f.$error}} {{f.$errorParam}}</li>
     </ul>
-    <div ng-show="files && parsing">
+    <div ng-show="files && isParsing()">
        {{log}}
     </div>
 </div>
