--- a/src/partials/logsWeb.html
+++ b/src/partials/logsWeb.html
@@ -33,7 +33,7 @@
                 disabledng-mouseup  ="mouseUp(log)"
                 disabledsglclick="mouseUp(log)"
                 disabledng-mousemove="mouseMove(event)"
-                ng-dblClick="view(log)"
+                ng-dblClick="viewWebMessage(log)"
                 >
 				
 				<td title="'LID'" 			filter="{ id: 'number'}" 		sortable="'id'" 		ng-if="true" header-title="columns.LID.title" class="text-center">{{log.id}}</td>				
