--- a/src/partials/logsKernel.html
+++ b/src/partials/logsKernel.html
@@ -37,7 +37,7 @@
 	            <td>
 					<button class="btn btn-default btn-sm" ng-click="toggleSelection(log)" ng-class="{'active': log.isSelected}" ng-dblClick="preventAction($event)"><span class="glyphicon glyphicon-flag"></span></button>
 					<button class="btn btn-default btn-sm" ng-click="viewKernelMessage(log)" ng-dblClick="preventAction($event)"><span class="glyphicon glyphicon-eye-open"></span></button>
-					<button class="btn btn-danger btn-sm" ng-click="del(log)" ng-dblClick="preventAction($event)"><span class="glyphicon glyphicon-trash"></span></button>	
+					<button class="btn btn-danger btn-sm" ng-click="delKernel(log)" ng-dblClick="preventAction($event)"><span class="glyphicon glyphicon-trash"></span></button>	
 				</td>
 			</tr>
 		</table>
