Tabs are only used if more than one log-type is present

--- a/dev/partials/logsKernel.html
+++ b/dev/partials/logsKernel.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" class="flipin flipout">
+<div class="panel panel-default" class="flipin flipout"  ng-show="dataset.logs.kernel.length != 0">
 	<!-- Default panel contents -->	
 	<div class="panel-heading clearfix">
 		<b>MSTR Kernel XML API Logs - ({{dataset.logs.kernel.length - 1}} loaded) </b>
