--- a/src/partials/logsWeb.html
+++ b/src/partials/logsWeb.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" class="flipin flipout">
+<div class="panel panel-default" class="flipin flipout" ng-show="dataset.logs.web.length != 0">
 	<!-- Default panel contents -->	
 	<div class="panel-heading clearfix">
 		<b>MSTR Web Logs - ({{dataset.logs.web.length - 1}} loaded) </b>
