--- a/dev/partials/logsWeb.html
+++ b/dev/partials/logsWeb.html
@@ -6,6 +6,7 @@
     <div class="btn-group pull-left">
       <button class="btn btn-default btn-xs" ng-click="showFilter = !showFilter" ng-class="{'active': showFilter}"><span class="glyphicon glyphicon-filter"></span> Search</button>
       <button class="btn btn-default btn-xs" ng-click="toggleResizeWeb()" ng-class="{'active': resizeWeb}"><span class="glyphicon glyphicon-resize-horizontal"></span> Resize</button>
+      <button class="btn btn-default btn-xs" ng-click="download('json')""><span class="glyphicon glyphicon-download-alt" title="JSON"></span> JSON</button>
       <!--<button class="btn btn-default btn-xs" ng-click="showFilter = !showFilter"><span class="glyphicon glyphicon-plus"></span></button>-->
     </div>
   </div>
