--- a/dev/partials/logsWeb.html
+++ b/dev/partials/logsWeb.html
@@ -6,7 +6,16 @@
     <div class="btn-group pull-left">
       <button class="btn btn-default btn-xs" ng-click="showFilter = !showFilter" ng-class="{'active': showFilter}"><span class="glyphicon glyphicon-filter"></span> Search</button>
       <button class="btn btn-default btn-xs" ng-click="toggleResizeWeb()" ng-class="{'active': resizeWeb}"><span class="glyphicon glyphicon-resize-horizontal"></span> Resize</button>
-      <button class="btn btn-default btn-xs" ng-click="downloadWeb('json')""><span class="glyphicon glyphicon-download-alt" title="JSON"></span> JSON</button>
+
+      <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <span class="glyphicon glyphicon-download-alt" title="Download"></span>
+        Download
+        <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li><a href="#" ng-click="downloadWeb('json')">JSON</a></li>
+        <li><a href="#" ng-click="downloadWeb('csv')">CSV</a></li>
+      </ul>
       <!--<button class="btn btn-default btn-xs" ng-click="showFilter = !showFilter"><span class="glyphicon glyphicon-plus"></span></button>-->
     </div>
   </div>
